@@ -60,6 +60,8 @@ class DeprecatedHooks {
 		'UserSetCookies' => [ 'deprecatedVersion' => '1.27' ],
 		'WikiPageDeletionUpdates' => [ 'deprecatedVersion' => '1.32', 'silent' => true ],
 		'userCan' => [ 'deprecatedVersion' => '1.37' ],
+		'ArticleDelete' => [ 'deprecatedVersion' => '1.37', 'silent' => true ],
+		'ArticleDeleteComplete' => [ 'deprecatedVersion' => '1.37', 'silent' => true ],
 	];
 
 	/**
