@@ -10,8 +10,9 @@ use WikiPage;
  * This is a hook handler interface, see docs/Hooks.md.
  * Use the hook name "ArticleDelete" to register handlers implementing this interface.
  *
- * @stable to implement
  * @ingroup Hooks
+ * @deprecated since 1.37, use PageDeleteHook instead. The new hook uses more modern typehints and requires callers
+ * to add errors to $status, rather than the $error parameter.
  */
 interface ArticleDeleteHook {
 	/**
